--- a/discovery-server/Jenkinsfile
+++ b/discovery-server/Jenkinsfile
@@ -7,9 +7,11 @@ tools {
 }
     stages{
         stage ('checkout'){
+            agent {
              docker {
         image 'ubuntu:latest'
       }
+            }
             steps{
                 script{
                     checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'git', url: 'https://github.com/narendr13/discovery.git']])
