--- a/discovery-server/Jenkinsfile
+++ b/discovery-server/Jenkinsfile
@@ -1,8 +1,6 @@
 pipeline{
     agent {
-        docker {
-        image 'ubuntu:latest'
-      }
+        docker { image 'ubuntu:latest' }
     }
 tools {
   maven 'maven'
