--- a/discovery-server/Jenkinsfile
+++ b/discovery-server/Jenkinsfile
@@ -15,18 +15,8 @@ tools {
                     }
             steps{
                 script{
-                    checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'git', url: 'https://github.com/narendr13/discovery.git']])
+                    sh 'echo king'
                 }
-            }
-        }
-        stage ('king2'){
-            steps{
-                script{
-                    def mvnHome = tool 'maven'
-                    def mvnCmd = "${mvnHome}/bin/mvn"
-                    sh "${mvnCmd} -f discovery-server/pom.xml clean install"
-                }
-                //stash includes: '*/', name: 'myFiles'
             }
         }
     }
