--- a/discovery-server/Jenkinsfile
+++ b/discovery-server/Jenkinsfile
@@ -9,8 +9,7 @@ tools {
         stage ('checkout'){
             agent {
                 docker {
-                    image 'alpine/git:latest
-'
+                    image 'alpine/git:latest'
                     reuseNode true
                 }
             }
