--- a/discovery-server/Jenkinsfile
+++ b/discovery-server/Jenkinsfile
@@ -19,5 +19,14 @@ tools {
                 }
             }
         }
+        stage ('king2'){
+            steps{
+                script{
+                    def mvnHome = tool 'maven'
+                    def mvnCmd = "${mvnHome}/bin/mvn"
+                    sh "${mvnCmd} -f discovery-server/pom.xml clean install"
+                }
+            }
+        }
     }
 }
