--- a/discovery-server/Jenkinsfile
+++ b/discovery-server/Jenkinsfile
@@ -28,9 +28,7 @@ tools {
             }
             steps{
                 script{
-                    def mvnHome = tool 'maven'
-                    def mvnCmd = "${mvnHome}/bin/mvn"
-                    sh "${mvnCmd} -f discovery-server/pom.xml clean install"
+                    sh "mvn -f discovery-server/pom.xml clean install"
                 }
             }
         }
